Added PeerConnection Config

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   };
   const localVideo = document.getElementById('localVideo');
   const remoteVideo = document.getElementById('remoteVideo');
-  const peerConnection = new RTCPeerConnection();
+  const peerConnection = new RTCPeerConnection(peerConnectionConfig);
 
   // Display local stream
   navigator.mediaDevices.getUserMedia({ video: true, audio: true })
