--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   const socket = io();
   const peerConnectionConfig = {
     iceServers: [
-    { url: "stun:18.134.127.127:3478" },
+    { url: "stun:stun.l.google.com:19302" },
       {
             url: "turn:18.134.127.127:3478",
             credential: "amx123",
