--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   const peerConnectionConfig = {
     iceServers: [
     { url: "stun:stun.l.google.com:19302" },
-      {
-            url: "turn:18.134.127.127:3478",
-            credential: "amx123",
-            username: "amxdev",
-     },
+    //   {
+    //         url: "turn:18.134.127.127:3478",
+    //         credential: "amx123",
+    //         username: "amxdev",
+    //  },
     ]
   };
   const localVideo = document.getElementById('localVideo');
